--- a/starters/lab/lab-06-rubric.Rmd
+++ b/starters/lab/lab-06-rubric.Rmd
@@ -5,6 +5,8 @@ date: "Insert date here"
 output: html_document
 ---
 
+### **Half point for YAML (MAX 0.5)**
+
 ### Load packages and data
 
 ```{r load-packages, message = FALSE}
@@ -15,11 +17,15 @@ library(tidyverse)
 
 ### Exercise 1
 
+### **Half point for correct read function and object name (MAX 0.5)**
+
 ```{r import-data}
 class_survey <- read_csv("data/class-survey.csv")
 ```
 
 ### Exercise 2
+
+### **Half point for correct input dataset and correct columns (MAX 1)**
 
 ```{r pivot-longer, eval = T}
 class_survey_long <- class_survey %>% 
@@ -34,6 +40,8 @@ head(class_survey_long, 10)
 
 ### Exercise 3
 
+### **Half point each for correct group_by variable, summarize variable, functions/names and na.rm statement (MAX 2)**
+
 ```{r summarize-long-data}
 class_survey_long %>% 
   group_by(question) %>% 
@@ -45,6 +53,8 @@ class_survey_long %>%
 
 ### Exercise 4
 
+### **Half point for completing the remaining functions correctly, acceptible if incorrect by consistent with the functions in Exercise 3 (MAX 0.5)**
+
 ```{r define-function-body, eval = F}
 min(response, na.rm = T)
 median(response, na.rm = T)
@@ -53,6 +63,8 @@ max(response, na.rm = T)
 ```
 
 ### Exercise 5
+
+### **Half point each for identifying `response`, identifying that is a vector because it is a column of data from `class_survey_long`, and updating the code (MAX 1.5)**
 
 Each function requires the input `response` which is equivalent to a vector object because it is a variable from the `class_survey_long` data frame, and variables within data frame are vectors.
 
@@ -65,9 +77,13 @@ max(response_vector, na.rm = T)
 
 ### Exercise 6
 
+### **Half point for stating it would be a bad name becuase it matches an existing function (MAX 0.5)**
+
 `summarize()` would be a bad name because it over-writes the existing summarize function in dplyr
 
 ### Exercise 7
+
+### **Half point each for correct function name and response_vector input (MAX 1)**
 
 ```{r write-compute-summary-stats, eval = T}
 compute_summary_stats <- function(response_vector){
@@ -82,15 +98,21 @@ compute_summary_stats <- function(response_vector){
 
 ### Exercise 8
 
+### **Half point for testing appropriately with a class_survey variable (MAX 0.5)**
+
 ```{r test-compute-summary-stats}
 compute_summary_stats(class_survey$pets)
 ```
 
 ### Exercise 9
 
+### **Half point for stating only the last line of the function body is returned (MAX 0.5)**
+
 Functions return the output of the last line of code in the function body, therefore, we only get the `max()` value for the variable selected.
 
 ### Exercise 10
+
+### **half point for correct use of response_vector, half point for matching functions to tibble names, and half point for the testing chunk with correct output (MAX 1.5)**
 
 ```{r fix-compute-summary-stats, eval = T}
 compute_summary_stats <- function(response_vector){
