--- a/slides/u4-6-review/u4-u6-review-1-starter.Rmd
+++ b/slides/u4-6-review/u4-u6-review-1-starter.Rmd
@@ -58,8 +58,8 @@ Add your code here.
 
 ```{r merge-two-vectors, eval = F}
 ___ <- tibble::tibble(
-  month_name = "month_name",
-  ___ = ___
+  "month_name" = month_name,
+  "___" = ___
 )
 ```
 
