typo fix in review 1 starter

--- a/slides/u4-6-review/u4-u6-review-1-starter.Rmd
+++ b/slides/u4-6-review/u4-u6-review-1-starter.Rmd
@@ -131,8 +131,8 @@ Add your code here.
 
 ```{r try-merge-vectors, eval = F}
 ___ <- tibble::tibble(
-  month_name = "month_name",
-  ___ = ___
+  "month_name" = month_name,
+  "___" = ___
 )
 ```
 
